--- a/Signout.html
+++ b/Signout.html
@@ -61,6 +61,7 @@
                 <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'there is a plan for repeat labs in the ED to help guide care and disposition')">repeat labs</button>
                 <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'there are labs pending at time of signout that will require follow-up')">labs pending</button>
                 <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'there is imaging pending that will require follow-up')">imaging pending</button>
+                <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'there is a consult pending to help inform patient care and disposition')">consult pending</button>
                 <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'code status has been reviewed and documented in the chart')">code status</button>
                 <button data-section="GeneralCareComponents" onclick="handleButtonClick(this, 'patient sitter status has been reviewed and documented in the chart')">sitter status</button>
                 <textarea id="GeneralCareComponentsText" placeholder="" onchange="updateRealTimeText('General care components', 'GeneralCareComponentsText')"></textarea>
