--- a/radiologyread.html
+++ b/radiologyread.html
@@ -29,7 +29,7 @@
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'head')">head</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'neck')">neck</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'chest')">chest</button>
-                <button data-section="Imaging type" onclick="handleButtonClick(this, 'abdomen')">abdomen</button>
+                <button data-section="Imaging type" onclick="handleButtonClick(this, 'abdomen and pelvis')">abdomen/pelvis</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'C-spine')">C-spine</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'T-spine')">T-spine</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'L-spine')">L-spine</button>
