--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Chesttube.html">Chest Tube</a></li>
                 <li><a href="definitivefracture.html">Def Fx Care</a></li>
-                <li><a href="dentalblock.html">Dental Block</a></li>
+                <li><a href="Dentalblock.html">Dental Block</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="Epistaxis.html">Epistaxis</a></li>
                 <li><a href="Foreignbody.html">Foreign Body</a></li>
