--- a/Splinting.html
+++ b/Splinting.html
@@ -59,14 +59,14 @@
                 <textarea id="fractureTypeText" placeholder="" onchange="updateRealTimeText('Fracture Type', 'fractureTypeText')"></textarea>
             </div>
 
-            <!-- Pre-test Exam Section -->
+            <!-- Pre-splint Exam Section -->
             <div class="input-group">
-                <h3>Pre-test Exam</h3>
-                <button data-section="preTestExam" onclick="handleButtonClick(this, 'the affected extremity was neurovascularly intact prior to splinting')">n/v intact</button>
-                <button data-section="preTestExam" onclick="handleButtonClick(this, 'there were absent pulses concerning for vascular compromise')">absent pulses</button>
-                <button data-section="preTestExam" onclick="handleButtonClick(this, 'there was diminished capillary refill concerning for vascular compromise')">CR</button>
-                <button data-section="preTestExam" onclick="handleButtonClick(this, 'there was neurologic deficit')">neurologic deficit</button>
-                <textarea id="preTestExamText" placeholder="" onchange="updateRealTimeText('Pre-test Exam', 'preTestExamText')"></textarea>
+                <h3>Pre-splint Exam</h3>
+                <button data-section="preSplintExam" onclick="handleButtonClick(this, 'the affected extremity was neurovascularly intact prior to splinting')">n/v intact</button>
+                <button data-section="preSplintExam" onclick="handleButtonClick(this, 'there were absent pulses concerning for vascular compromise')">absent pulses</button>
+                <button data-section="preSplintExam" onclick="handleButtonClick(this, 'there was diminished capillary refill concerning for vascular compromise')">CR</button>
+                <button data-section="preSplintExam" onclick="handleButtonClick(this, 'there was neurologic deficit')">neurologic deficit</button>
+                <textarea id="preSplintExamText" placeholder="" onchange="updateRealTimeText('Pre-splint Exam', 'preSplintExamText')"></textarea>
             </div>
 
             <!-- Splinting Section -->
@@ -86,11 +86,11 @@
                 <textarea id="splintingText" placeholder="" onchange="updateRealTimeText('Splinting', 'splintingText')"></textarea>
             </div>
 
-            <!-- Post-reduction Exam Section -->
+            <!-- Post-splint Exam Section -->
             <div class="input-group">
-                <h3>Post-reduction Exam</h3>
-                <button data-section="postReductionExam" onclick="handleButtonClick(this, 'the affected extremity was neurovascularly intact following reduction and splinting')">n/v intact</button>
-                <textarea id="postReductionExamText" placeholder="" onchange="updateRealTimeText('Post-reduction Exam', 'postReductionExamText')"></textarea>
+                <h3>Post-splinting Exam</h3>
+                <button data-section="postSplintingExam" onclick="handleButtonClick(this, 'the affected extremity was neurovascularly intact following splinting')">n/v intact</button>
+                <textarea id="postSplintingExamText" placeholder="" onchange="updateRealTimeText('Post-splinting Exam', 'postSplintingExamText')"></textarea>
             </div>
 
             <!-- Complications Section -->
