--- a/Ischemicstroke.html
+++ b/Ischemicstroke.html
@@ -21,23 +21,28 @@
         <!-- Last Known Well Time -->
         <div class="input-group">
             <h3>Last Known Well Time</h3>
-            <textarea id="last_known_well_timeText"
+            <textarea
+                id="last_known_well_timeText"
                 placeholder="Please document the patient’s last known well time"
-                onchange="updateRealTimeText('last_known_well_time', 'last_known_well_timeText')"></textarea>
+                onchange="updateRealTimeText('last_known_well_time', 'last_known_well_timeText')">
+            </textarea>
         </div>
 
         <!-- NIH Score -->
         <div class="input-group">
             <h3>NIH Score</h3>
-            <textarea id="nih_scoreText"
+            <textarea
+                id="nih_scoreText"
                 placeholder="Record NIH score here"
-                onchange="updateRealTimeText('nih_score', 'nih_scoreText')"></textarea>
+                onchange="updateRealTimeText('nih_score', 'nih_scoreText')">
+            </textarea>
         </div>
 
         <!-- Thrombolytics -->
         <div class="input-group">
             <h3>Thrombolytics</h3>
-            <button data-section="thrombolytics"
+            <button
+                data-section="thrombolytics"
                 onclick="handleButtonClick(this, 'thrombolytics were administered due to concern for acute ischemic stroke in conjunction with neurology recommendations')">
                 administered
             </button>
@@ -46,73 +51,99 @@
         <!-- Contraindications -->
         <div class="input-group">
             <h3>Contraindications for thrombolytics</h3>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'the patient presented outside of the window for thrombolytic consideration')">
-                timeframe
+                LKW Time
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'the patient is currently taking anticoagulant medications that are contraindications for thrombolytic')">
                 anticoagulation
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'the patient has poorly controlled hypertension')">
                 hypertension
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'thrombocytopenia was a contraindication for thrombolytic')">
                 thrombocytopenia
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'the patient has a history of intracranial bleeding which is a contraindication for thrombolytic')">
                 history of intracranial bleed
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'patient with recent surgery which is a contraindication for thrombolytic')">
                 recent surgery
             </button>
+
             <button data-section="contraindications"
                 onclick="handleButtonClick(this, 'patient with a recent history of GI bleed which is a contraindication for thrombolytic')">
                 GI bleed
             </button>
         </div>
 
-        <!-- Management components -->
+        <!-- Reasons for thrombolytic delay -->
         <div class="input-group">
-            <h3>Management components</h3>
-            <button data-section="management_components"
-                onclick="handleButtonClick(this, 'the patient’s glucose was evaluated emergently to rule this out as a potential etiology')">
-                glucose evaluation
+            <h3>Reasons for thrombolytic delay</h3>
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'the patient’s airway had to be secured which caused overall delays in lytic administration')">
+                airway management
             </button>
-            <button data-section="management_components"
-                onclick="handleButtonClick(this, 'the patient’s blood pressure was managed acutely due to hypertension on arrival')">
-                BP management
-            </button>
-            <button data-section="management_components"
-                onclick="handleButtonClick(this, 'due to concern for a LVO, CTA was ordered in addition to CT non-contrast')">
-                CTA ordered
-            </button>
-            <button data-section="management_components"
-                onclick="handleButtonClick(this, 'the patient’s home medications were reviewed by me to make sure there were no contraindicating medications to thrombolytics')">
-                med rec
-            </button>
-            <button data-section="management_components"
-                onclick="handleButtonClick(this, 'extensive discussion with family about the management of their ischemic stroke')">
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'extensive family discussions regarding care caused delays in lytic administration')">
                 family discussion
             </button>
 
-            <textarea id="management_componentsText"
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'delays in patient’s blood work results caused a delay in lytic administration')">
+                lab delay
+            </button>
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'delays in establishing last known well caused a delay in lytic administration')">
+                unclear LKW
+            </button>
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'delays in a neurology evaluation caused a delay in lytic administration')">
+                delayed neuro eval
+            </button>
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'requirement to optimize blood pressure for the patient caused a delay in lytic administration')">
+                blood pressure management
+            </button>
+
+            <button data-section="reasons_for_thrombolytic_delay"
+                onclick="handleButtonClick(this, 'delays in CT scan facilitation caused a delay in lytic administration')">
+                imaging delays
+            </button>
+
+            <textarea
+                id="reasons_for_thrombolytic_delayText"
                 placeholder=""
-                onchange="updateRealTimeText('management_components', 'management_componentsText')"></textarea>
+                onchange="updateRealTimeText('reasons_for_thrombolytic_delay', 'reasons_for_thrombolytic_delayText')">
+            </textarea>
         </div>
     </div>
 
     <div class="output-section">
         <div id="outputArea"></div>
+
         <button onclick="copyToClipboard()">Copy to Clipboard</button>
         <button onclick="clearOutput()">Clear</button>
 
         <div class="related-procedures">
-            <p>Include a full NIH score in your chart, which can be created here:
+            <p>
+                Include a full NIH score in your chart, which can be created here:
                 <a href="NIHSS.html">NIH Score</a>
             </p>
         </div>
@@ -120,6 +151,5 @@
 </div>
 
 <script src="ischemicstroke.js"></script>
-
 </body>
 </html>
