--- a/Ischemicstroke.html
+++ b/Ischemicstroke.html
@@ -143,8 +143,12 @@
 
         <div class="related-procedures">
             <p>
-                Include a full NIH score in your chart, which can be created here:
-                <a href="NIHSS.html">NIH Score</a>
+                <b>Note</b>
+                CMS and BlueWater both require inclusion of an NIH stroke scale for stroke care. You can find an NIH stroke scale calculator here:<br>
+                <a href="NIHSS.html">NIH Score</a><br>
+                
+                If a FAST-ED score is clinically relevant for your patient when considering LVO, you can find a calculator here:<br>
+                <a href="FASTED.html">FAST-ED Score</a>
             </p>
         </div>
     </div>
