--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li><a href="ABCD2.html">ABCD2</a></li>
                 <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="CHA2DS2VASC.html">CHA2DS2-VASC</a></li>
+                <li><a href="FASTED.html">FAST-ED</a></li>
                 <li><a href="Geneva.html">Geneva Score</a></li>
                 <li><a href="GCS.html">GCS Score</a></li>
                 <li><a href="GRACE.html">GRACE Score</a></li>
